k8s-use-case/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
    tech: node
spec:
  replicas: 3
  template:
    metadata:
      name: app
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: jaguirrema/app:latest
          imagePullPolicy: Always
      restartPolicy: Always
  selector:
    matchLabels:
      app: app
