k8s-use-case/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - port: 8080
  type: NodePort
