k8s-use-case/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/ingress.class: nginx
    # here we can define a whitelist
    # nginx.ingress.kubernetes.io/whitelist-source-range: 34.10.0.0/24
spec:
  tls:
    - secretName: app-tls-cert
      hosts:
        - juan-pablo-aguirre.test-devops.elmy.team
  rules:
    - host: juan-pablo-aguirre.test-devops.elmy.team
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 8080
